Aplicação funcionando e banco configurado (postgre)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=buscaCep
 
+#Conexão ao banco Postgre
+spring.datasource.url=jdbc:postgresql://localhost:5432/pointData
+spring.datasource.username=postgres
+spring.datasource.password=postegres
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
