--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-
 #Conexao ao banco Azure
-spring.datasource.url=jdbc:sqlserver://project-aos-azure.database.windows.net:1433;database=AOS-Projeto;user=unicap@project-aos-azure;password=Ventiladorbranco123;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=unicap@project-aos-azure
-spring.datasource.password=Ventiladorbranco123
+spring.datasource.url=jdbc:sqlserver://aula-aos-2.database.windows.net:1433;database=AULA-AOS-2;user=igor1234@aula-aos-2;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=igor1234
+spring.datasource.password=unicap1234U
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-7
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
